--- a/src/xxs-1/index.html
+++ b/src/xxs-1/index.html
@@ -19,7 +19,9 @@
     </ul>
 
     <input id="input" type="text">
-    <button id="submit">Submit</button>
+    <button id="submit">Submit</button><br>
+    <div id="success"></div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="./index.js"></script>
 </body>
