--- a/src/static/auth-3/index.html
+++ b/src/static/auth-3/index.html
@@ -14,16 +14,19 @@
         <a href="#about">About</a>
     </div>
 
-    <form class="search-bar" id="search-bar">
-        <h1>Search</h1>
+    <form class="search-bar" id="search-bar" method="GET" action="/">
+        <h3>Search</h3>
         <div>
             <label for="search">Item:</label>
-            <input name="itemName" type="text" id="itemName" />
+            <input name="item_name" type="text" id="item_name" />
         </div>
         <div>
             <input name="submit" type="submit" />
         </div>
     </form>
+    <div id="list">
+        <ul id="search-results"></ul>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="./index.js"></script>
